@@ -7,6 +7,8 @@ Hbase Change Log
    HBASE-12    When hbase regionserver restarts, it says "impossible state for
                createLease()"
    HBASE-575   master dies with stack overflow error if rootdir isn't qualified
+   HBASE-582   HBase 554 forgot to clear results on each iteration caused by a filter
+               (Clint Morgan via Stack)
 
   IMPROVEMENTS
    HBASE-559   MR example job to count table rows
